added delete route/users

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -16,6 +16,7 @@
       {% endfor %}
 
       <button class="form-button">Update</button>
+      <a href="/delete-account/{{ g.user.id }}">Delete account</a>
     </form>
   </div>
 {% endblock %}
