added follow/friend functionality

--- a/templates/friends.html
+++ b/templates/friends.html
@@ -16,7 +16,7 @@
           </div>
           <div class="content-wrapper">
             <p class="user-name">{{ user.name }}</p>
-            <a href="/users/{{ user.id }}" class="card-link">@{{ user.username }}</a>
+            <a href="/user/{{ user.id }}" class="card-link">@{{ user.username }}</a>
             <p class="user-bio">{{ user.bio }}</p>
           </div>
         </div>
