--- a/templates/base.html
+++ b/templates/base.html
@@ -15,10 +15,9 @@
             <a href='/' class="site-logo" style="background-image: url('https://cdn-icons-png.flaticon.com/512/1266/1266295.png');"></a>
             <div class="button-wrapper">
                 <div class="nav-button"><a href='/'>Home</a></div>
-                <div class="nav-button"><a href='/friends'>Find Friends</a></div>
+                <div class="nav-button"><a href='/friends'>Friends</a></div>
                 <div class="nav-button"><a href='/routes'>Routes</a></div>
-                <div class="nav-button"><a href='/profile'>Profile</a></div>
-                <div class="nav-button"><a href='/logout'>Logout</a></div>
+                <div class="nav-button"><a href='/profile'> {{ g.user.name }} </a></div>
             </div>
         </div>
     </nav>
