--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -9,6 +9,7 @@
         <img src="{{ user.image_url }}"/>     
         <p1>{{ user.user_type }}</p1>
         <p1>{{ user.bio }}</p1>
+        <a href='/logout'>Logout</a>
         <a href="/profile/edit">Edit Profile</a>
     </div>
 {% endblock %}
