--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="../static/signup-login.css">
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 {% block content %}
   <div class="flash-container">
